# hotglsl

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: demo.rs
examples/shaders/: shader.frag  shader.vert
src/: lib.rs
