[package]
name = "hotglsl"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A simple crate for hotloading GLSL shaders as SPIR-V."
readme = "README.md"
keywords = ["hotload", "shader", "glsl", "spirv", "vulkan"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nannou-org/hotglsl.git"
homepage = "https://github.com/nannou-org/hotglsl"
edition = "2018"

[dependencies]
glsl-to-spirv = "0.1.7"
notify = "=5.0.0-pre.11"
thiserror = "1"
