[package]
name = "hotglsl"
version = "0.2.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A simple crate for hotloading GLSL shaders as SPIR-V."
readme = "README.md"
keywords = ["hotload", "shader", "glsl", "spirv", "vulkan"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nannou-org/hotglsl.git"
homepage = "https://github.com/nannou-org/hotglsl"
edition = "2018"

[dependencies]
naga = { version = "0.14", features = ["glsl-in", "spv-out"] }
notify = "6"
thiserror = "1"
